--- a/package.json
+++ b/package.json
@@ -12,5 +12,8 @@
     "prettier": "^3.2.5",
     "turbo": "^2.0.0"
   },
-  "packageManager": "pnpm@10.17.1"
+  "packageManager": "pnpm@10.17.1",
+  "dependencies": {
+    "typescript": "^5.9.3"
+  }
 }
