--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "packageManager": "pnpm@10.17.1",
   "dependencies": {
+    "@tailwindcss/typography": "^0.5.19",
     "typescript": "^5.9.3"
   }
 }
