--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
   "packageManager": "pnpm@10.17.1",
   "dependencies": {
     "@tailwindcss/typography": "^0.5.19",
+    "@tiptap/pm": "^3.11.0",
+    "@tiptap/starter-kit": "^3.11.0",
     "typescript": "^5.9.3"
   }
 }
