[dyad] Corregidos errores de resolución de módulos en el monorepo actualizando tsconfig.json - wrote 2 file(s)

--- a/packages/core/tsconfig.json
+++ b/packages/core/tsconfig.json
@@ -1,12 +1,20 @@
 {
-  "extends": "../tsconfig/nextjs.json",
+  "extends": "tsconfig/base.json",
   "compilerOptions": {
+    "jsx": "react-jsx",
+    "lib": ["dom", "dom.iterable", "esnext"],
+    "allowSyntheticDefaultImports": true,
+    "esModuleInterop": true,
+    "declaration": true,
+    "declarationMap": true,
+    "outDir": "dist",
+    "rootDir": ".",
+    "moduleResolution": "node",
     "baseUrl": ".",
     "paths": {
-      "@/*": ["./*"]
-    },
-    "jsx": "react-jsx"
+      "@/*": ["./src/*"]
+    }
   },
-  "include": ["**/*.ts", "**/*.tsx"],
-  "exclude": ["node_modules"]
+  "include": ["index.tsx", "src/**/*.ts", "src/**/*.tsx"],
+  "exclude": ["node_modules", "dist"]
 }
