--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "@tailwindcss/typography": "^0.5.19",
     "@tiptap/pm": "^3.11.0",
     "@tiptap/starter-kit": "^3.11.0",
+    "cmdk": "^1.1.1",
+    "pocketbase": "^0.26.3",
     "typescript": "^5.9.3"
   }
 }
