--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -15,5 +15,19 @@
     "react": "^18.2.0",
     "typescript": "^5"
   },
-  "dependencies": {}
+  "dependencies": {
+    "@tiptap/core": "^2.27.1",
+    "@tiptap/extension-table": "^2.27.1",
+    "@tiptap/extension-table-cell": "^2.27.1",
+    "@tiptap/extension-table-header": "^2.27.1",
+    "@tiptap/extension-table-row": "^2.27.1",
+    "@tiptap/extension-task-item": "^2.27.1",
+    "@tiptap/extension-task-list": "^2.27.1",
+    "@tiptap/pm": "^2.27.1",
+    "@tiptap/starter-kit": "^2.27.1",
+    "cmdk": "^1.1.1",
+    "lucide-react": "^0.552.0",
+    "novel": "^1.0.2",
+    "tiptap-extension-global-drag-handle": "^0.1.18"
+  }
 }
