--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -17,6 +17,7 @@
   },
   "dependencies": {
     "@tiptap/core": "^2.27.1",
+    "@tiptap/extension-placeholder": "^3.11.0",
     "@tiptap/extension-table": "^2.27.1",
     "@tiptap/extension-table-cell": "^2.27.1",
     "@tiptap/extension-table-header": "^2.27.1",
