--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -29,6 +29,7 @@
     "cmdk": "^1.1.1",
     "lucide-react": "^0.552.0",
     "novel": "^1.0.2",
-    "tiptap-extension-global-drag-handle": "^0.1.18"
+    "tiptap-extension-global-drag-handle": "^0.1.18",
+    "use-debounce": "^10.0.6"
   }
 }
