--- a/apps/hub/package.json
+++ b/apps/hub/package.json
@@ -25,9 +25,11 @@
     "@radix-ui/react-tabs": "^1.1.13",
     "@radix-ui/react-toast": "^1.2.15",
     "@radix-ui/react-tooltip": "^1.2.8",
-    "@tiptap/pm": "^3.10.1",
-    "@tiptap/react": "^3.10.1",
-    "@tiptap/starter-kit": "^3.10.1",
+    "@tiptap/extension-image": "^3.11.1",
+    "@tiptap/extension-link": "^3.11.1",
+    "@tiptap/pm": "^3.11.1",
+    "@tiptap/react": "^3.11.1",
+    "@tiptap/starter-kit": "^3.11.1",
     "@types/js-cookie": "^3.0.6",
     "@types/jsonwebtoken": "^9.0.10",
     "autoprefixer": "^10.4.21",
