--- a/turbo.json
+++ b/turbo.json
@@ -1,5 +1,17 @@
 {
+  "$schema": "https://turbo.build/schema.json",
   "tasks": {
+    "build": {
+      "inputs": [
+        "$TURBO_DEFAULT$",
+        ".env*"
+      ],
+      "outputs": [
+        ".next/**",
+        "!.next/cache/**"
+      ]
+    },
+    "lint": {},
     "dev": {
       "cache": false,
       "persistent": true
