--- a/apps/hub/package.json
+++ b/apps/hub/package.json
@@ -20,6 +20,7 @@
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@radix-ui/react-label": "^2.1.8",
+    "@radix-ui/react-popover": "^1.1.15",
     "@radix-ui/react-scroll-area": "^1.2.10",
     "@radix-ui/react-select": "^2.2.6",
     "@radix-ui/react-separator": "^1.1.8",
@@ -40,15 +41,19 @@
     "autoprefixer": "^10.4.21",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "cmdk": "^1.1.1",
     "date-fns": "^4.1.0",
     "framer-motion": "^12.23.24",
     "js-cookie": "^3.0.5",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.552.0",
     "next": "^15.5.6",
+    "next-themes": "^0.4.6",
     "novel": "^1.0.2",
+    "papaparse": "^5.5.3",
     "pocketbase": "^0.26.3",
     "react": "^18",
+    "react-day-picker": "^9.12.0",
     "react-dom": "^18",
     "react-hook-form": "^7.66.1",
     "recharts": "^2.15.4",
@@ -60,6 +65,7 @@
   },
   "devDependencies": {
     "@types/node": "^20",
+    "@types/papaparse": "^5.5.2",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
